Last night's efforts

--- a/.build/error.html
+++ b/.build/error.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/static/css/style.css">
 
 	
-	<title>Default</title>
+	<title>Melbourne Tram Simulator 2016</title>
 	
 
 </head>
