--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <audio>
   <source src="{% static '/audio/ding.mp3' %}" type="audio/mp3">
 </audio>
@@ -74,10 +83,21 @@
   <source src="{% static '/audio/ding.mp3' %}" type="audio/mp3">
 </audio>
 
+
 <section id="wrapper">
+  <img class="logo" src="{% static '/images/logo.png' %}" alt="">
   <div id="container">
     <button id="button"></button>
-  </div>
+</div>
+
+<div class="share">
+
+<div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </section>
+
+</div>
 
 {% endblock content%}
