Add total dings with firebase Closes #2 (@Haustralier dropped the ball, again)

--- a/.build/error.html
+++ b/.build/error.html
@@ -7,6 +7,7 @@
 
 		<link rel="shortcut icon" href="/static/images/favicon.ico">
 		<link rel="stylesheet" href="/static/css/style.css">
+		<script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
 
 		
 		<title>Melbourne Tram Simulator 2016</title>
@@ -53,6 +54,8 @@
 		<script src="//code.jquery.com/jquery.min.js"></script>
 		<script src="/static/js/main.js"></script>
 		<script src="/static/js/fastclick.js"></script>
+		<script src="/static/js/firebase.js"></script>
+
 		
 
 		<script>$(function() {
