--- a/pages/index.html
+++ b/pages/index.html
@@ -79,6 +79,11 @@
   <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
 </div>
 
+
+  <h3>Total number of dings</h3>
+  <div id="counter"></div>
+
+
 <section id="wrapper">
   <img class="logo" src="{% static '/images/logo.png' %}" alt="">
   <div id="container">
