--- a/.build/index.html
+++ b/.build/index.html
@@ -102,14 +102,7 @@
   <source src="/static/audio/ding.mp3" type="audio/mp3">
 </audio>
 
-<div class="share">
-  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-  <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
-</div>
 
-
-  <h3>Total number of dings</h3>
-  <div id="counter"></div>
 
 
 <section id="wrapper">
@@ -117,8 +110,15 @@
   <div id="container">
     <button id="button"></button>
 </div>
-
 </section>
+
+<div class="share">
+  <h3><span id="counter">0</span> dings have been dinged</h3>
+  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
+</div>
+
+
 
 
 
