--- a/.build/index.html
+++ b/.build/index.html
@@ -113,9 +113,11 @@
 </section>
 
 <div class="share">
-  <h3><span id="counter">0</span> dings have been dinged</h3>
-  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-  <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
+  <div class="counter"><span id="counter">0</span> dings have been dinged</div>
+  <div class="share-buttons">
+    <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
+  </div>
 </div>
 
 
