--- a/pages/index.html
+++ b/pages/index.html
@@ -85,7 +85,7 @@
 </section>
 
 <div class="share">
-  <div class="counter"><span id="counter">0</span> dings have been dinged</div>
+  <div class="counter"><span id="counter">0</span> dings have been dinged.</div>
   <div class="share-buttons">
     <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
     <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
