--- a/pages/index.html
+++ b/pages/index.html
@@ -74,24 +74,15 @@
   <source src="{% static '/audio/ding.mp3' %}" type="audio/mp3">
 </audio>
 
-
-
-
 <section id="wrapper">
-  <img class="logo" src="{% static '/images/logo.png' %}" alt="">
+  <img class="logo 2x" src="{% static '/images/logo.png' %}" alt="">
   <div id="container">
     <button id="button"></button>
-</div>
+  </div>
 </section>
 
-<div class="share">
-  <div class="counter"><span id="counter">0</span> dings have been dinged.</div>
-  <div class="share-buttons">
-    <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"  data-type="button_count" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-via="twitterapi" data-lang="en">Tweet</a>
-  </div>
+<div class="counter">
+  <p><span id="counter">0</span> dings have been dung so far</p>
 </div>
-
-
 
 {% endblock content%}
